--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25 //26
+    compileSdkVersion 27 //25 //26
     defaultConfig {
         applicationId "com.udacity.mike.popmovies"
-        minSdkVersion 11 //10 //15
-        targetSdkVersion 25 //26
+        minSdkVersion 15//11 //10 //15
+        targetSdkVersion 27//25 //26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -21,7 +21,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //implementation 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    //compile 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -30,7 +31,8 @@ dependencies {
     //fix gradle dependency conflict
     compile 'com.android.support:support-annotations:27.1.1'
     //recyclerView dependency
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    //compile 'com.android.support:recyclerview-v7:25.3.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     // butter knife
