--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     // butter knife
     compile ('com.jakewharton:butterknife:8.8.1')
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+/*    // COMPLETED (1) Add room dependencies
+    compile "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"*/
 }
 
 repositories {
